--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,11 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "symfony/var-dumper": "^4.0"
+    },
+
+    "autoload": {
+    	"psr-4": {
+    		"sCnpj\\": "src/"
+    	}
     }
 }
