--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/var-dumper": "^4.0"
+        "symfony/var-dumper": "^4.0",
+        "symfony/dom-crawler": "^4.0",
+        "symfony/css-selector": "^4.0"
     },
 
     "autoload": {
