--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,17 @@
 {
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/var-dumper": "^4.0",
         "symfony/dom-crawler": "^4.0",
         "symfony/css-selector": "^4.0"
     },
 
     "autoload": {
     	"psr-4": {
-    		"sCnpj\\": "src/"
+    		"asm\\": "src/"
     	}
+    },
+
+    "require-dev": {
+        "symfony/var-dumper": "^4.0"
     }
 }
